@@ -471,3 +471,4 @@
 	- merged redundant dipswitch/configuration parsing code into parse_listxml_element_cfg()
 	- added enum cfg_type for .cfg entry type parameter
 	- added option "use_softwarelist" to control usage of software lists
+	- renamed the output file postfix for device file entries from "dev" to "sfw" (software)
